--- a/mv.html
+++ b/mv.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Porteira - Homepage</title>
+<title>Porteira - Modus Vivendi</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <style>
 	body{
 		background-color: #6F6C53;
@@ -17,8 +17,8 @@
 				width:100%;
         }
 </style>
+
 <body>
-	<!--menu-->
 	<div class="navbar-wraper" id="menu">
 	<nav class="navbar navbar-inverse navbar-fixed-top">
           <div class="container">
@@ -29,27 +29,25 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Porteira Oficial de Elomar</a>
+              <a class="navbar-brand" href="home.html">Porteira Oficial de Elomar</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="bio.html">Biografia</a></li>
-                <li><a href="contato.html">Contato</a></li>
+				<li><a href="contato.html">Contato</a></li>
 				<li><a href="cv.html">Curriculum Operae</a></li>
-				<li><a href="mv.html">Modus Vivendi</a></li>				  
+				<li class="active"><a href="#">Modus Vivendi</a></li>				  
               </ul>
             </div>
           </div>
         </nav>
 	</div>
-	<!--fim do menu-->
-
 	
-<!-- jQuery library -->
+	
+	<!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
 </body>
 </html>
