--- a/cv.html
+++ b/cv.html
@@ -17,7 +17,7 @@
         		margin:auto;
 				width:100%;
         }
-</style>
+</style><!--STYLE -->
 
 <body>
 	<div class="navbar-wraper" id="menu">
@@ -38,13 +38,15 @@
                 <li><a href="bio.html">Biografia</a></li>
 				<li><a href="contato.html">Contato</a></li>
 				<li class="active"><a href="#">Curriculum Operae</a></li>
-				<li><a href="mv.html">Modus Vivendi</a></li>				  
+				<li><a href="mv.html">Modus Vivendi</a></li>
+				<li><a href="disco.html">Discografia</a></li>  
               </ul>
             </div>
           </div>
         </nav>
 	</div><!--MENU-->
-		<div class="container">
+	<hr>	
+	<div class="container">
 		<div class="jumbotron">
 			<figure>
 				<img src="img/banner.jpg" width="100%" height="100%">
@@ -59,9 +61,33 @@
 			<p>
 			Música culta:
 			</p>
-			
-		
-		
+				<ul>
+					<li>11 óperas;</li>
+					<li>11 antífonas;</li>
+					<li>4 galopes estradeiros;</li>
+					<li>1 concerto de violão e orquestra;</li>	
+					<li>1 concerto para piano e orquestra - composto e a ser partiturado;</li>
+					<li>1 pequeno concerto para sax alto e piano - composto e partiturado;</li>
+					<li>1 sinfonia - quase toda composta;</li>
+					<li>12 peças para violão-solo.</li>
+				</ul>
+			<p><em>As composições para violão na maioria já estão partituradas.</em></p>
+			<p>Cancioneiro:</p>
+			<ul>
+				<li>Um caderno de oitenta canções, sendo que a maioria delas já se encontram gravadas e uma pequena parte inédita.</li>
+			</ul>
+			<p>Óperas</p>
+			<ul>
+				<li><em>Bespas Esponsais Sertana - São cinco trágicos que se encontram nos seguintes estágios:</em></li>
+					<ul>
+						<li>A Carta - ópera com 4 cenas, compostas e partituradas;</li>
+						<li>A Casa das Bonecas - composta e 30% partiturada;</li>
+						<li>Faviela - toda composta e nada partiturada;</li>
+						<li>O Peão Mansador - composta e a ser escrita;</li>
+						<li>Os Poetas são Loucos (mas conversam com Deus) - composta em partes;</li>
+					</ul>
+				<li>Auto da Catingueira - composta, partiturada e gravada em disco.</li>
+			</ul>
 		</div>
 	</div>
 	<!-- jQuery library -->
