--- a/home.html
+++ b/home.html
@@ -37,7 +37,8 @@
                 <li><a href="bio.html">Biografia</a></li>
                 <li><a href="contato.html">Contato</a></li>
 				<li><a href="cv.html">Curriculum Operae</a></li>
-				<li><a href="mv.html">Modus Vivendi</a></li>				  
+				<li><a href="mv.html">Modus Vivendi</a></li>
+				<li><a href="disco.html">Discografia</a></li>   
               </ul>
             </div>
           </div>
