--- a/contato.html
+++ b/contato.html
@@ -84,7 +84,8 @@ textarea.form-control {
                 <li><a href="bio.html">Biografia</a></li>
 				<li class="active"><a href="#">Contato</a></li>
 				<li><a href="cv.html">Curriculum Operae</a></li>
-				<li><a href="mv.html">Modus Vivendi</a></li>				  
+				<li><a href="mv.html">Modus Vivendi</a></li>
+				<li><a href="disco.html">Discografia</a></li>    
               </ul>
             </div>
           </div>
