--- a/mv.html
+++ b/mv.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Porteira - Modus Vivendi</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"><!--background-->
+	
 </head>
 <style>
 	body{
@@ -15,7 +16,11 @@
         		line-height: 1;
         		margin:auto;
 				width:100%;
-        }
+        }.gallery
+{
+    display: inline-block;
+    margin-top: 20px;
+}
 </style>
 
 <body>
@@ -29,11 +34,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="home.html">Porteira Oficial de Elomar</a>
+              <a class="navbar-brand" href="index.html">Porteira Oficial de Elomar</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="bio.html">Biografia</a></li>
 				<li><a href="contato.html">Contato</a></li>
 				<li><a href="cv.html">Curriculum Operae</a></li>
@@ -46,9 +51,6 @@
 	</div>
 	
 	
-	<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	
 </body>
 </html>
