--- a/contato.html
+++ b/contato.html
@@ -76,11 +76,11 @@ textarea.form-control {
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="home.html">Porteira Oficial de Elomar</a>
+              <a class="navbar-brand" href="index.html">Porteira Oficial de Elomar</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="bio.html">Biografia</a></li>
 				<li class="active"><a href="#">Contato</a></li>
 				<li><a href="cv.html">Curriculum Operae</a></li>
